--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,9 @@ MAINTAINER  Ju <julien@nitronet.org>
 
 ARG DOCKER_TIMEZONE=Europe/Paris
 
+ENV IRCU_SOURCES ircu2.10.12.18.tar.gz
+ENV IRCU_VERSION 2.10.12.18
+
 # Configure timezone
 # -----------------------------------------------------------------------------
 RUN echo $DOCKER_TIMEZONE > /etc/timezone; dpkg-reconfigure -f noninteractive tzdata
@@ -18,24 +21,21 @@ RUN apt-get -qq update && apt-get install -qq -y curl \
 
 RUN useradd -c 'IRC user' -m -d /home/ircnet -s /bin/bash ircnet
 
-ADD ./sources /home/ircnet/sources
-
-WORKDIR /home/ircnet
+COPY sources/$IRCU_SOURCES /home/ircnet/$IRCU_SOURCES
 
 # install IRC things
 USER ircnet
 
-RUN tar xzf ircu2.10.12.18.tar.gz && \
-    mv ircu2.10.12.18 /home/ircnet/ircu2.10.12.18 && \
-    cd /home/ircnet/ircu2.10.12.18 && \
-    ./configure --prefix=/home/ircnet/ircd && \
+RUN cd /home/ircnet && tar xzf $IRCU_SOURCES && \
+    cd ircu$IRCU_VERSION && \
+    ./configure --prefix=/home/ircnet/ircd --with-maxcon=100000 && \
     make && make install
+
+USER root
 
 COPY bootstrap.sh /root/bootstrap.sh
 RUN chmod 755 /root/bootstrap.sh
 
 EXPOSE 6667
 
-WORKDIR /home/ircnet
-
-CMD ["/root/bootstrap.sh"]
+ENTRYPOINT /root/bootstrap.sh
