--- a/config/ircd.conf
+++ b/config/ircd.conf
@@ -481,7 +481,14 @@ Kill
 # 'hub = "*";'.
 #
 # Our primary uplink.
-
+Connect {
+  name = "Newserv.NitroNet.Org";
+  host = "127.0.0.1";
+  password = "newservdocker";
+  class = "Server";
+  maxhops = 10;
+  autoconnect = no;
+};
 
 # [crule]
 #
@@ -552,7 +559,7 @@ CRULE
 # operator.  Listing defaulted privileges just makes things harder to
 # find.
 Operator {
- host = "*@*.uu.net";
+ host = "*@*";
  password = "$PLAIN$notencryptedpass";
  name = "Niels";
  class = "Opers";
@@ -618,6 +625,7 @@ Operator {
 
 # The following are normal client ports
 Port { port = 6667; };
+Port { port = 4400; server = yes; };
 
 # Quarantine blocks disallow operators from using OPMODE and CLEARMODE
 # on certain channels.  Opers with the force_opmode (for local
