--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,11 @@ services:
         container_name: irc
         ports:
             - "6667:6667"
+            - "4400:4400"
         volumes:
             - "./config/ircd.conf:/home/ircnet/ircd/lib/ircd.conf:rw"
             - "./config/ircd.motd:/home/ircnet/ircd/lib/ircd.motd:rw"
+            - "./config/newserv.conf:/home/ircnet/newserv-master/newserv.conf:rw"
         cap_add:
             - SYS_PTRACE
         environment:
