added newserv + README

--- a/config/ircd.conf
+++ b/config/ircd.conf
@@ -560,8 +560,8 @@ CRULE
 # find.
 Operator {
  host = "*@*";
- password = "$PLAIN$notencryptedpass";
- name = "Niels";
+ password = "$PLAIN$operpass";
+ name = "julien";
  class = "Opers";
 };
 
@@ -632,18 +632,20 @@ Port { port = 4400; server = yes; };
 # channels, force_local_opmode) privilege may override the quarantine
 # by prefixing the channel name with an exclamation point ('!').
 # Wildcards are NOT supported; the channel name must match exactly.
-Quarantine {
-  "#shells" = "Thou shalt not support the h4><0rz";
-  "&kiddies" = "They can take care of themselves";
-};
+# Quarantine { };
 
 # This is a server-implemented alias to send a message to a service.
 # The string after Pseudo is the command name; the name entry inside
 # is the service name, used for error messages.  More than one nick
 # entry can be provided; the last one listed has highest priority.
-Pseudo "CHANSERV" {
- name = "X";
- nick = "X@channels.undernet.org";
+Pseudo "Q" {
+ name = "Q";
+ nick = "Q@Newserv.NitroNet.Org";
+};
+
+Pseudo "N" {
+ name = "N";
+ nick = "N@Newserv.NitroNet.Org";
 };
 
 
@@ -701,7 +703,7 @@ features
   "KILL_IPMISMATCH"="FALSE";
   "IDLE_FROM_MSG"="TRUE";
   "HUB"="TRUE";
-  "WALLOPS_OPER_ONLY"="FALSE";
+  "WALLOPS_OPER_ONLY"="TRUE";
   "NODNS"="FALSE";
   "RANDOM_SEED"="5846844619431931944151";
   "DEFAULT_LIST_PARAM"="TRUE";
@@ -712,14 +714,14 @@ features
   "HIDDEN_IP"="127.0.0.1";
   "KILLCHASETIMELIMIT"="30";
   "MAXCHANNELSPERUSER"="10";
-  "NICKLEN" = "12";
+  "NICKLEN" = "20";
   "AVBANLEN"="40";
   "MAXBANS"="30";
   "MAXSILES"="15";
   "HANGONGOODLINK"="300";
  "HANGONRETRYDELAY" = "10";
  "CONNECTTIMEOUT" = "90";
- "MAXIMUM_LINKS" = "1";
+ "MAXIMUM_LINKS" = "10";
  "PINGFREQUENCY" = "120";
  "CONNECTFREQUENCY" = "600";
  "DEFAULTMAXSENDQLENGTH" = "40000";
@@ -746,8 +748,8 @@ features
   "HIS_SNOTICES_OPER_ONLY" = "TRUE";
   "HIS_DEBUG_OPER_ONLY" = "TRUE";
   "HIS_WALLOPS" = "TRUE";
-  "HIS_MAP" = "TRUE";
-  "HIS_LINKS" = "TRUE";
+  "HIS_MAP" = "FALSE";
+  "HIS_LINKS" = "FALSE";
   "HIS_TRACE" = "TRUE";
   "HIS_STATS_a" = "TRUE";
   "HIS_STATS_c" = "TRUE";
@@ -785,12 +787,12 @@ features
   "HIS_WHOIS_LOCALCHAN" = "TRUE";
   "HIS_WHO_SERVERNAME" = "TRUE";
   "HIS_WHO_HOPCOUNT" = "TRUE";
-  "HIS_MODEWHO" = "TRUE";
-  "HIS_BANWHO" = "TRUE";
+  "HIS_MODEWHO" = "FALSE";
+  "HIS_BANWHO" = "FALSE";
   "HIS_KILLWHO" = "TRUE";
   "HIS_REWRITE" = "TRUE";
-  "HIS_REMOTE" = "TRUE";
-  "HIS_NETSPLIT" = "TRUE";
+  "HIS_REMOTE" = "FALSE";
+  "HIS_NETSPLIT" = "FALSE";
   "HIS_SERVERNAME" = "*.nitronet.org";
   "HIS_SERVERINFO" = "The NitroNet Test Network";
   "HIS_URLSERVERS" = "http://www.nitronet.org/servers.php";
